--- a/test/test1.html
+++ b/test/test1.html
@@ -17,6 +17,7 @@
   "BB": {"kind": "bit", "wave": [[0,0],[1,0],[2,1],[3,1],[4,0],[5,2],[6,2],[7,0],[8,3],[9,3],[10,1],[11,2],[12,1],[13,3],[14,2],[15,3],[16,0]]}
 },
  "time": 16,
+ "timescale": -12,
  "view": [
   {"name":"clock", "ref":"AA"},
   {"name":"foo",   "ref":"BB"},
